manifests/kibana/basic-auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana-basic-auth
  namespace: logging
  labels:
    app: kibana
    component: basic-auth
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: http
  # - port: 443
  #   protocol: TCP
  #   targetPort: 443
  #   name: https
  selector:
    app: kibana
    component: basic-auth
